# pylspplugin

./: AUTHORS.txt  LICENSE  README.md  setup.cfg
.github/: ISSUE_TEMPLATE.md
pylsp_testplugin/: detect.py  parseimport.py  parsesql.py  plugin.py
test/: test_plugin.py
