
[metadata]
name = pylsp-testplugin
version = 0.1
author = Emika Hammond
author_email = eth@bu.edu
url = 1
description = test package for module import highlights
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Software Development
    License :: OSI Approved :: MIT License


[options]

packages = find:

install_requires = 
    python-lsp-server

# python_requires = >= 3.6

[options.entry_points]
pylsp = pylsp_testplugin = pylsp_testplugin.plugin


[options.extras_require]
dev =
    pytest
